nodejs/template.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:25Z"
    generation: 2
    labels:
      app: workshops
    name: workshops
    namespace: exceptions
    resourceVersion: "455113742"
    selfLink: /apis/apps.openshift.io/v1/namespaces/exceptions/deploymentconfigs/workshops
    uid: 3e1a3d0c-a372-11ea-9655-0a580a8100f0
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: workshops
      deploymentconfig: workshops
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: workshops
          deploymentconfig: workshops
      spec:
        containers:
        - env:
          - name: REDIS
            value: redis:6379
          - name: REDIS_PASSWORD
            value: password
          image: image-registry.openshift-image-registry.svc:5000/exceptions/workshops@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
          imagePullPolicy: Always
          name: workshops
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - workshops
        from:
          kind: ImageStreamTag
          name: workshops:latest
          namespace: exceptions
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/exceptions/workshops@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-31T19:12:06Z"
      lastUpdateTime: "2020-05-31T19:12:06Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-05-31T19:12:07Z"
      lastUpdateTime: "2020-05-31T19:12:07Z"
      message: replication controller "workshops-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      template.alpha.openshift.io/wait-for-ready: "true"
    creationTimestamp: "2020-05-31T19:06:45Z"
    generation: 2
    labels:
      app: redis-ephemeral
      template: redis-ephemeral-template
    name: redis
    namespace: exceptions
    resourceVersion: "455109134"
    selfLink: /apis/apps.openshift.io/v1/namespaces/exceptions/deploymentconfigs/redis
    uid: df32b0c2-a371-11ea-a6ee-0a580a820124
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      name: redis
    strategy:
      activeDeadlineSeconds: 21600
      recreateParams:
        timeoutSeconds: 600
      resources: {}
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: redis-ephemeral
          name: redis
      spec:
        containers:
        - env:
          - name: REDIS_PASSWORD
            valueFrom:
              secretKeyRef:
                key: database-password
                name: redis
          image: image-registry.openshift-image-registry.svc:5000/openshift/redis@sha256:407c34e8042818fb860a9df0dcc758cfd7abe75171c5bfcb0fe4c89acc099985
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 6379
            timeoutSeconds: 1
          name: redis
          ports:
          - containerPort: 6379
            protocol: TCP
          readinessProbe:
            exec:
              command:
              - /bin/sh
              - -i
              - -c
              - test "$(redis-cli -h 127.0.0.1 -a $REDIS_PASSWORD ping)" == "PONG"
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/redis/data
            name: redis-data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: redis-data
    test: false
    triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
        - redis
        from:
          kind: ImageStreamTag
          name: redis:3.2
          namespace: openshift
        lastTriggeredImage: image-registry.openshift-image-registry.svc:5000/openshift/redis@sha256:407c34e8042818fb860a9df0dcc758cfd7abe75171c5bfcb0fe4c89acc099985
      type: ImageChange
    - type: ConfigChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-05-31T19:07:13Z"
      lastUpdateTime: "2020-05-31T19:07:13Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-05-31T19:07:14Z"
      lastUpdateTime: "2020-05-31T19:07:14Z"
      message: replication controller "redis-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - type: ConfigChange
      message: config change
    latestVersion: 1
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:25Z"
    labels:
      app: workshops
    name: workshops
    namespace: exceptions
    resourceVersion: "455111146"
    selfLink: /api/v1/namespaces/exceptions/services/workshops
    uid: 3e495e78-a372-11ea-bbb3-0698e01dcbf2
  spec:
    clusterIP: 172.30.241.90
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: workshops
      deploymentconfig: workshops
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      template.openshift.io/expose-uri: redis://{.spec.clusterIP}:{.spec.ports[?(.name=="redis")].port}
    creationTimestamp: "2020-05-31T19:06:45Z"
    labels:
      app: redis-ephemeral
      template: redis-ephemeral-template
    name: redis
    namespace: exceptions
    resourceVersion: "455108659"
    selfLink: /api/v1/namespaces/exceptions/services/redis
    uid: df0c100d-a371-11ea-9063-02fdb1202f5a
  spec:
    clusterIP: 172.30.41.64
    ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
    selector:
      name: redis
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2020-05-31T19:14:09Z"
    labels:
      app: workshops
    name: workshops
    namespace: exceptions
    resourceVersion: "455115634"
    selfLink: /apis/route.openshift.io/v1/namespaces/exceptions/routes/workshops
    uid: e74be6f0-a372-11ea-a6ee-0a580a820124
  spec:
    host: workshops-exceptions.<cluster-wildcard>
    port:
      targetPort: 8080-tcp
    subdomain: ""
    to:
      kind: Service
      name: workshops
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2020-05-31T19:14:09Z"
        status: "True"
        type: Admitted
      host: workshops-exceptions.<cluster-wildcard>
      routerCanonicalHostname: <cluster-wildcard>
      routerName: default
      wildcardPolicy: None
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:24Z"
    labels:
      app: workshops
    name: workshops
    namespace: exceptions
    resourceVersion: "455111114"
    selfLink: /apis/build.openshift.io/v1/namespaces/exceptions/buildconfigs/workshops
    uid: 3deb65a4-a372-11ea-9655-0a580a8100f0
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: workshops:latest
    postCommit: {}
    resources: {}
    runPolicy: Serial
    source:
      contextDir: nodejs
      git:
        uri: https://github.com/carlossagala/workshops.git
      sourceSecret:
        name: git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: nodejs:10
          namespace: openshift
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers:
    - github:
        secret: u26E0eHd4PTUjVA4bS-7
      type: GitHub
    - generic:
        secret: TPKuUdODtHKaLwF85x-N
      type: Generic
    - type: ConfigChange
    - imageChange:
        lastTriggeredImageID: image-registry.openshift-image-registry.svc:5000/openshift/nodejs@sha256:bce9d648821108fb7046b33b6f3f1b49607fd44a242de2a6a0a538f56e353153
      type: ImageChange
  status:
    lastVersion: 1
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-05-31T19:09:24Z"
    generation: 1
    labels:
      app: workshops
    name: workshops
    namespace: exceptions
    resourceVersion: "455113363"
    selfLink: /apis/image.openshift.io/v1/namespaces/exceptions/imagestreams/workshops
    uid: 3dc6c96a-a372-11ea-a6ee-0a580a820124
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: image-registry.openshift-image-registry.svc:5000/exceptions/workshops
    publicDockerImageRepository: default-route-openshift-image-registry.<cluster-wildcard>/exceptions/workshops
    tags:
    - items:
      - created: "2020-05-31T19:11:45Z"
        dockerImageReference: image-registry.openshift-image-registry.svc:5000/exceptions/workshops@sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
        generation: 1
        image: sha256:281534a2c1fa9b70e59747baf01edda10c2687fb6e333d239bd4904d9ca280d8
      tag: latest
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
